--- a/文本效果/index.css
+++ b/文本效果/index.css
@@ -1,5 +1,6 @@
 @charset'utf-8';
 
+/*文本效果*/
 
 /*
 文本颜色（文本前景色)
@@ -26,7 +27,7 @@ text-decoration:属性值;
 
 /* 
 文本大小写:
-text-transform:属性值;
+text-transform:none;
 */
  p{
  	/*默认状态*/
@@ -41,7 +42,7 @@ text-transform:属性值;
 
 /* 
 文本缩进:
-text-index:属性值;
+text-index:normal;
 */
 p{
 	/*默认间距*/
@@ -71,7 +72,7 @@ p{
 
 /* 
 段落行高:
-line-height:属性值;
+line-height:normal;
 */
 p{	
 	/*默认行高*/
@@ -86,7 +87,7 @@ p{
 
 /* 
 字母间距:
-letter-spacing:属性值;
+letter-spacing:normal;
 */
 p{
 	/*默认间距*/
@@ -97,7 +98,7 @@ p{
 
 /* 
 单词间距:
-word-spacing:属性值;
+word-spacing:normal;
 */
 p{
 	/*默认值*/
@@ -108,7 +109,7 @@ p{
 
 /* 
 过长单词换行:
-word-wrap:属性值;
+word-wrap:normal;
 */
 p{
 	/*默认值*/
@@ -119,10 +120,10 @@ p{
 
 /* 
 空白排版方式:
-white-space:属性值;
+white-space:normal;
 */
 p{
-	/*默认值*/	/*不识别回车*/
+	/*默认值*//*不识别回车*/
 	white-space: normal;	/*不保留空白符，文本排满换行*/
 	/*不换行*/
 	white-space: nowrap;	/*不保留空白符，文本不换行*/
@@ -130,7 +131,7 @@ p{
 	white-space: pre;		/*保留空白符，遇换行符换行*/
 	/*不保留空白符换行*/ /*识别回车*/
 	white-space: pre-line;	/*不保留空白符，排满或遇换行符换行*/
-	/*保留空白符换行*/	/*识别回车*/
+	/*保留空白符换行*//*识别回车*/
 	white-space: pre-wrap;	/*保留空白符，排满或遇换行符换行*/
 }
 
@@ -145,7 +146,7 @@ text-shadow:水平偏移量,垂直偏移量,阴影模糊半径,阴影颜色;
 	text-shadow:-1px -1px 2px red;
 	/*多重阴影*/
 	text-shadow:1px 0px 0px gray,
-			2px 0px 0px red;
+				2px 0px 0px red;
 }  
 
 /*
